src/objects/Zuora__RefundPart__c.object
<CustomObject>
    <description>The portions of the refunds.</description>
    <fields>
        <fullName>Zuora__CreatedDate__c</fullName>
        <description>The date when the invoice was created in the Zuora system.</description>
        <label>Zuora Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zuora__CreditMemo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Credit memos that you issued to your customers to reduce invoice and account balances.</description>
        <inlineHelpText>Credit memos that you issued to your customers to reduce invoice and account balances.</inlineHelpText>
        <label>Credit Memo</label>
        <referenceTo>Zuora__CreditMemo__c</referenceTo>
        <relationshipLabel>Refund Parts</relationshipLabel>
        <relationshipName>Refund_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field holds the Zuora object ID, and is used as external ID for data synchronization between Salesforce and Zuora.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field holds the Zuora object ID, and is used as external ID for data synchronization between Salesforce and Zuora.</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zuora__Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The money sent by a customer to pay for charges related to their subscriptions.</description>
        <inlineHelpText>The money sent by a customer to pay for charges related to their subscriptions.</inlineHelpText>
        <label>Payment</label>
        <referenceTo>Zuora__Payment__c</referenceTo>
        <relationshipLabel>Refund Parts</relationshipLabel>
        <relationshipName>Refund_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__RefundAmount__c</fullName>
        <label>Refund Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__Refund__c</fullName>
        <description>Represents money that is returned to a customer, or a reversed transaction.</description>
        <inlineHelpText>Represents money that is returned to a customer, or a reversed transaction.</inlineHelpText>
        <label>Refund</label>
        <referenceTo>Zuora__Refund__c</referenceTo>
        <relationshipLabel>Refund Parts</relationshipLabel>
        <relationshipName>Refund_Parts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Zuora__UpdatedDate__c</fullName>
        <description>The date when the invoice was updated in the Zuora system.</description>
        <label>Zuora Updated Date</label>
        <type>DateTime</type>
    </fields>
    <label>Refund Part</label>
    <nameField>
        <label>Refund Amount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Refund Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>